Undo placeholders and comment-outs from dist.ini

--- a/dist.ini
+++ b/dist.ini
@@ -4,8 +4,6 @@ license = FreeBSD
 copyright_holder = Diogo Franco
 copyright_year   = 2012
 
-version = v0.1
-
 [@Basic]
 [ModuleBuild]
 
@@ -15,12 +13,12 @@ perl = 5.008
 
 [PodWeaver]
 
-;[Git::NextVersion]
+[Git::NextVersion]
 [PkgVersion]
 [NextRelease]
 
 [PodCoverageTests]
 [PodSyntaxTests]
 
-;[@Git]
-;[Git::CommitBuild]
+[@Git]
+[Git::CommitBuild]
