Yet more dist.ini git config fixes

--- a/dist.ini
+++ b/dist.ini
@@ -22,7 +22,11 @@ version_regexp  = ^(v.+)$
 [PodSyntaxTests]
 
 [@Git]
+commit_msg = %v%n%n%c
+time_zone = UTC
 tag_format = %v
 tag_message = %v
 
 [Git::CommitBuild]
+release_branch = %v
+release_message = Release %v built from %h (on %b)
