Yet more dist.ini git-related poking...

--- a/dist.ini
+++ b/dist.ini
@@ -28,5 +28,5 @@ tag_format = %v
 tag_message = %v
 
 [Git::CommitBuild]
-release_branch = %v
+release_branch = build/release
 release_message = Release %v built from %h (on %b)
