Change license to MIT, which CPAN likes more
The effective contents of the licenses are the same.

--- a/dist.ini
+++ b/dist.ini
@@ -1,6 +1,6 @@
 name    = WWW-Shorten-Akari
 author  = Kovensky <diogomfranco@gmail.com>
-license = FreeBSD
+license = MIT
 copyright_holder = Diogo Franco
 copyright_year   = 2012
 
