Several dist.ini updates

--- a/dist.ini
+++ b/dist.ini
@@ -6,20 +6,32 @@ copyright_year   = 2012
 
 [@Basic]
 [ModuleBuild]
+[DualBuilders]
 
-[Prereqs]
-perl = 5.008
+[MinimumPerl]
 [AutoPrereqs]
+[PrereqsClean]
+[CheckPrereqsIndexed]
+
+[MetaProvides::Class]
+[MetaProvides::Package]
 
 [PodWeaver]
 
 [Git::NextVersion]
 version_regexp  = ^(v.+)$
-[PkgVersion]
+[OurPkgVersion]
 [NextRelease]
 
+[Test::Synopsis]
+[Test::Kwalitee::Extra]
 [PodCoverageTests]
 [PodSyntaxTests]
+[NoTabsTests]
+[ReportVersions]
+
+[GithubMeta]
+issues = 1
 
 [@Git]
 commit_msg = %v%n%n%c
@@ -30,3 +42,10 @@ tag_message = %v
 [Git::CommitBuild]
 release_branch = build/release
 release_message = Release %v built from %h (on %b)
+
+[TravisYML]
+
+[Clean]
+[Twitter]
+hash_tags = #perl #cpan
+url_shortener = Akari
