--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ install:
    - export RELEASE_TESTING=1 AUTOMATED_TESTING=1 AUTHOR_TESTING=1 HARNESS_OPTIONS=j10:c HARNESS_TIMER=1
    - export OLD_CPANM_OPT=$PERL_CPANM_OPT
    - export PERL_CPANM_OPT='--mirror http://cpan.metacpan.org/ --mirror http://search.cpan.org/CPAN '$PERL_CPANM_OPT
-   - cpanm --verbose DAVECROSS/WWW-Shorten-3.00.tar.gz
+   - cpanm --verbose -n DAVECROSS/WWW-Shorten-2.00.tar.gz
    - cpanm --verbose CORION/parent-0.215.tar.gz
    - cpanm --verbose JPEACOCK/version-0.7701.tar.gz
    - cpanm --verbose DAGOLDEN/Module-Build-0.3601.tar.gz
