dist.ini: Remove Module::Build dependency, update to Test::NoTabs

--- a/dist.ini
+++ b/dist.ini
@@ -5,8 +5,6 @@ copyright_holder = Diogo Franco
 copyright_year   = 2012
 
 [@Basic]
-[ModuleBuild]
-[DualBuilders]
 
 [MinimumPerl]
 [AutoPrereqs]
@@ -27,7 +25,7 @@ version_regexp  = ^(v.+)$
 [Test::Kwalitee::Extra]
 [PodCoverageTests]
 [PodSyntaxTests]
-[NoTabsTests]
+[Test::NoTabs]
 [ReportVersions]
 
 [GithubMeta]
