Use the GitHub bundle instead of GithubMeta

--- a/dist.ini
+++ b/dist.ini
@@ -28,8 +28,8 @@ version_regexp  = ^(v.+)$
 [Test::NoTabs]
 [ReportVersions]
 
-[GithubMeta]
-issues = 1
+[@GitHub]
+metacpan = 1
 
 [@Git]
 commit_msg = %v%n%n%c
